--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,120 +1,12 @@
-<!-- <main>
-  <section>
-    <% if user_signed_in? %>
-      <h5><%= current_user.username %> is signed in</h5>
-    <% end %>
-  </section>
-  
-  <% if @top_vote_article %>
-    <section>
-      <div class="top-image-container">
-        <div class="top-image" style="background-image: url(<%=(url_for(@top_vote_article.image)) %>); height: 500px">
-          <h2 id="orange-color" class="ml-4"><%= @top_vote_article.title %></h2>
-        </div>
-      </div>
-    </section>
-  <% end %>
-
-  <section>
-    <div class="container-box">
-      <% Category.includes(:articles).order(:priority).limit(4).each do |category| %>
-        <% latest_article = category.articles.last %>
-        <a class="category-article-link" href="<%= category_path(category) %>">
-          <% if !latest_article.nil? and latest_article.image.attached? %>
-            <image class="category-article-image" src="<%= url_for(latest_article.image) %>">
-          <% else %>
-            <p class="category-article-image" id="black-color">No article</p>
-          <% end %>
-          <div class="category-title">
-            <p><span class="pb-1 font-weight-bold ml-2 cat-span"><%= category.name %></span></p>
-            <% if !latest_article.nil? %>
-              <p><span class="font-weight-bold ml-2 article-span"><%= latest_article.title %></span></p>
-            <% end %>
-          </div>
-        </a>
-      <% end %>
-    </div>
-  </section>
-
-</main> -->
-
 <main>
 
   <!-- <div class="jumbotron" style="background-image: url(<%= asset_path 'blogging.jpg' %>)"> -->
-  <% unless @top_vote_article.nil? %>
-    <div class="jumbotron" style="background-image: url(<%= url_for(@top_vote_article.image) %>)">
-      <p class="text-white"><%= @top_vote_article.title %></p>
-    </div>
-  <% else %>
-    <div class="jumbotron" style="background-image: url(<%= asset_path 'blogging.jpg' %>)">
-      <p class="text-white">Hahaha</p>
-    </div>
-  <% end %>
-
+  <%= jumbo_helper(@top_vote_article) %>
+  
   <div class="row mb-4">
     <% Category.all.limit(4).each do |category| %>
-      <% if !category.articles.empty? %>
-        <div class="col-sm-3">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title"><%= category.name %></h5>
-              <h6 class="card-subtitle mb-2 text-muted"><%= category.articles.last.title %></h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <%= link_to category.articles.last.title, article_path(category.articles.last), class: "card-link", id: "orange-color" %>
-            </div>
-          </div>
-        </div>
-      <% else %>
-        <div class="col-sm-3">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title"><%= category.name %></h5>
-              <h6 class="card-subtitle mb-2 text-muted">NO article</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
-            </div>
-          </div>
-        </div>
-      <% end %>
+      <%= card_helper(category, category.articles) %>
     <% end %>
-
-    <!-- <div class="col-sm-3">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-3">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-3">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
-    </div>
-  </div> -->
+  </div>
 
 </main>
-
-<!-- <nav class="navbar fixed-bottom navbar-light bg-light">
-  <a class="navbar-brand" href="#">Fixed bottom</a>
-</nav> -->
