--- a/app/views/home/_card_category.html.erb
+++ b/app/views/home/_card_category.html.erb
@@ -1,9 +1,11 @@
 <div class="col-sm-3">
   <div class="card" style="background-image: url(<%= url_for(obj.articles.last.image) %>)">
     <div class="card-body">
-      <h5 class="card-title"><span class="card-category"><%= obj.name %></span></h5>
+      <div class="card-title">
+        <%= link_to obj.name, category_path(obj), class: "card-category" %>
+      </div> <!-- <a class="card-category" href"#"><%= obj.name %></a></h5> -->
       
-      <%= link_to obj.articles.last.title, article_path(obj.articles.last), class: "card-link", id: "orange-color" %>
+      <%= link_to obj.articles.last.title, article_path(obj.articles.last), class: "card-link card-article-title text-white" %>
     </div>
   </div>
 </div>
