--- a/app/views/home/_no_vote_jumbo.html.erb
+++ b/app/views/home/_no_vote_jumbo.html.erb
@@ -1,3 +1,3 @@
-<div class="jumbotron" style="background-image: url(<%= asset_path 'blogging.jpg' %>)">
-  <p class="text-white">Hahaha</p>
+<div class="jumbotron mb-1" style="background-image: url(<%= asset_path 'blogging.jpg' %>)">
+  <p id="orange-color">NO ARTICLE WITH TOP VOTE</p>
 </div>
