--- a/app/views/home/_top_vote_jumbo.html.erb
+++ b/app/views/home/_top_vote_jumbo.html.erb
@@ -1,3 +1,3 @@
-<div class="jumbotron" style="background-image: url(<%= url_for(obj.image) %>)">
-  <p class="text-white"><%= obj.title %></p>
+<div class="jumbotron mb-1" style="background-image: url(<%= url_for(obj.image) %>)">
+  <h1 id="orange-color" class="jumbo-title"><%= obj.title %></h1>
 </div>
