Fix design issue for category show page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -217,3 +217,16 @@ body {
   text-decoration: none;
   color: inherit;
 }
+
+.cate-article-title {
+  font-weight: bold;
+}
+
+.article-side {
+  position: relative;  
+}
+
+.del-btn {
+  position: absolute;
+  bottom: 0;
+}
