--- a/app/views/categories/_cate_article.html.erb
+++ b/app/views/categories/_cate_article.html.erb
@@ -1,25 +1,21 @@
 <div class="cat-container">
   <% obj.articles.order(created_at: :desc).each do |article| %>
     <div class="cat-article-container">
-      <div class="text-center">
-        <h3><span class="border-bottom pb-2"><%= obj.name %></span></h3>
-        <p class="mb-5 mt-4"><%= article.title %><p>
-        <p><%= truncate(article.text, length: 30) %></p>
+      <div class="px-2 article-side">
+        <p class="mb-2 mt-4 cate-article-title"><%= article.title %><p>
+        <p><%= simple_format(truncate(article.text, length: 50)) %></p>
         <p class="mt-3"><%= article.author.username %></p>
 
-        <%= form_with url: article_votes_path(article), method: :post do |f| %>
-          <%= f.submit 'VOTE', class: "btn btn-success"%>
-        <% end %>
         <p class="mb-0 mt-2">Votes: <%= article.votes.count %></p>
         <br>
+        <p><%= link_to 'Read More', article_path(article), id: "orange-color" %></p>
         <% if user_signed_in? and article.author == current_user %>
-          <%= link_to 'Delete Article', article, class: "btn btn-danger", method: :delete %>
+          <%= link_to 'Delete Article', article, class: "btn btn-danger del-btn mb-2", method: :delete %>
         <% end %>
+        
       </div>
-      <div>
-        <% if article.image.attached? %>
-          <image width="100%" height="100%" style="margin: 0" src="<%= url_for(article.image)%>">
-        <% end %>
+      <div style="width: 100%">
+        <image width="100%" height="380px" style="margin: 0" src="<%= url_for(article.image)%>">
       </div>
     </div>
   <% end %>
