--- a/app/views/home/_card_category.html.erb
+++ b/app/views/home/_card_category.html.erb
@@ -1,4 +1,4 @@
-<div class="col-sm-3">
+<div class="col-sm-3 pl-1">
   <div class="card" style="background-image: url(<%= url_for(obj.articles.last.image) %>)">
     <div class="card-body">
       <div class="card-title">
