Fix stylelint errors

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,7 +76,7 @@ html,
 body {
   height: 100%;
   margin-right: 0;
-  background-color: #E4E3E2;
+  background-color: #e4e3e2;
 }
 
 #page-content {
