--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="nav-bar fixed-bottom navbar" id="footer-section" id="sticky-footer">
+<footer class="nav-bar navbar" id="footer-section" id="sticky-footer">
   <span class="logo">
     <%= link_to 'MAC FORUM', root_path, class: "navbar-brand footer-logo", id: "orange-color" %>
   </span>
