--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,30 @@
-<%= cate_articles(@category, @category.articles) %>
+<% if !@category.articles.empty? %>
+  <div class="cat-container">
+    <% @category.articles.order(created_at: :desc).each do |article| %>
+      <div class="cat-article-container">
+        <div class="text-center">
+          <h3><span class="border-bottom pb-2"><%= @category.name %></span></h3>
+          <p class="mb-5 mt-4"><%= article.title %><p>
+          <p><%= truncate(article.text, length: 30) %></p>
+          <p class="mt-3"><%= article.author.username %></p>
+
+          <%= form_with url: article_votes_path(article), method: :post do |f| %>
+            <%= f.submit 'VOTE', class: "btn btn-success"%>
+          <% end %>
+          <p class="mb-0 mt-2">Votes: <%= article.votes.count %></p>
+          <br>
+          <% if user_signed_in? and article.author == current_user %>
+            <%= link_to 'Delete Article', article, class: "btn btn-danger", method: :delete %>
+          <% end %>
+        </div>
+        <div>
+          <% if article.image.attached? %>
+            <image width="100%" height="450em" style="margin: 0" src="<%= url_for(article.image)%>">
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+<% else %>
+  <p>No article yet </p>
+<% end %>
